src/test/deca/codegen/invalid/intermediaire2/wrongValue/01readFloat.deca
// Description:
//  readInt avec un float tres grand
//
// Resultats:
//  01readFloat.expected 
// 
// Historique:
//    cree le 10/06/2022

{
    float x = readFloat();
}